set base for html.

--- a/templates/text_analysis_app/index.html
+++ b/templates/text_analysis_app/index.html
@@ -1,4 +1,14 @@
-<h1>Welcome to Kozirase</h1>
-<a href="https://kojipro.an.r.appspot.com">
-    <button>Analysis</button>
-</a>
+<!--<h1>Welcome to Kozirase</h1>-->
+{% extends 'base.html' %}
+{% block content %}
+<h1 class="mt-5 pt-4 text-center">Welcome to KOZIRASE</h1>
+<div class="d-flex justify-content-center flex-wrap">
+    <p>
+        <a href="https://kojipro.an.r.appspot.com/">
+            <button>Analysis</button>
+        </a>
+    </p>
+</div>
+
+
+{% endblock %}
